--- a/static/style.css
+++ b/static/style.css
@@ -22,6 +22,11 @@ div#commuters table td:nth-child(odd){
     width: 30%!important;
     text-align: left;
 }
+
+div#city_distance table tr {
+    line-height: 14pt;
+}
+
 h3 {
     background-color: rgba(255, 255, 255, 1);
     border: 2px solid black;
@@ -211,7 +216,7 @@ ul.indent_list li {
     @page {
         resolution:300dpi;
         size: 8.5in 11in;
-        margin:0.2in 0.4in .75in;
+        margin:0.2in 0.4in .85in;
         @bottom-left {
             font-size: 7pt;
             width:35%;
