Changed type for NA values. Added more space to city distance table

--- a/static/style.css
+++ b/static/style.css
@@ -24,7 +24,7 @@ div#commuters table td:nth-child(odd){
 }
 
 div#city_distance table tr {
-    line-height: 14pt;
+    line-height: 14pt!important;
 }
 
 h3 {
