--- a/templates/town_profile.html
+++ b/templates/town_profile.html
@@ -93,8 +93,8 @@ Town Profile{% if config["town"] -%} - {{ config["town"] }}{% endif -%}
         {% if objects["employers"] -%}
         <h4>Major Employers (2014)</h4>
         <ul class="float_list">
-            {% for row in objects["employers"]["data"]["rows"] if row != "" -%}
-            <li>{{ " ".join(row) }}</li>
+            {% for row in objects["employers"]["data"]["rows"] -%}
+            <li>{{ " ".join(row|listValues) }}</li>
             {% endfor -%}
         </ul>
         {% endif -%}
@@ -278,7 +278,7 @@ Town Profile{% if config["town"] -%} - {{ config["town"] }}{% endif -%}
             <ul class="indent_list">
                 <h4>Electric Provider</h4>
                 {% for row in objects["electric"]["data"]["rows"] if row != "" -%}
-                <li>{{ " ".join(row) }}</li>
+                <li>{{ " ".join(row|listValues) }}</li>
                 {% endfor -%}
             </ul>
             {% endif -%}
@@ -286,7 +286,7 @@ Town Profile{% if config["town"] -%} - {{ config["town"] }}{% endif -%}
             <ul class="indent_list">
                 <h4>Gas Provider</h4>
                 {% for row in objects["gas"]["data"]["rows"] if row != "" -%}
-                <li>{{ " ".join(row) }}</li>
+                <li>{{ " ".join(row|listValues) }}</li>
                 {% endfor -%}
             </ul>
             {% endif -%}
@@ -294,7 +294,7 @@ Town Profile{% if config["town"] -%} - {{ config["town"] }}{% endif -%}
             <ul class="indent_list">
                 <h4>Water Provider</h4>
                 {% for row in objects["water"]["data"]["rows"] if row != "" -%}
-                <li>{{ " ".join(row) }}</li>
+                <li>{{ " ".join(row|listValues) }}</li>
                 {% endfor -%}
             </ul>
             {% endif -%}
@@ -302,7 +302,7 @@ Town Profile{% if config["town"] -%} - {{ config["town"] }}{% endif -%}
             <ul class="indent_list">
                 <h4>Cable Provider</h4>
                 {% for row in objects["cable"]["data"]["rows"] if row != "" -%}
-                <li>{{ " ".join(row) }}</li>
+                <li>{{ " ".join(row|listValues) }}</li>
                 {% endfor -%}
             </ul>
             {% endif -%}
