--- a/templates/town_profile.html
+++ b/templates/town_profile.html
@@ -2,6 +2,7 @@
 
 {% block head %}
     {{ super() }}
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/town_profile.css') }}">
 {% endblock head %}
 
 {% block title -%}
