--- a/static/styles/connect.css
+++ b/static/styles/connect.css
@@ -9,6 +9,13 @@ div.row > div > div {
     border: 1px solid black;
 }
 
+h2.table_title {
+    font-size:12pt;
+    font-weight: 500;
+    float: right;
+    margin:1% 3%;
+}
+
 /* Print-specific rules */
 @media print {
     @page {
@@ -18,7 +25,6 @@ div.row > div > div {
     body {
         font-size:8.5pt;
         margin:0!important;
-        font-family: "LiberationSerif";
     }
     div.row {
         page-break-inside: avoid;
