Pdf output is taking shape to resemble the wireframe we have proposed to CONNECT. Logo added. styles, template, mock json and intermediate script all have modifications to that end.

--- a/static/styles/connect.css
+++ b/static/styles/connect.css
@@ -1,35 +1,69 @@
-svg {
-    background-color:#EEE;
-}
-
-body {
-    height: 600px;
-}
-
 div.row > div > img,
 div.row > div > table,
 div.row > div > div {
     width: 100%;
-    border: 1px solid black;
 }
 
 h2.table_title {
-    font-size:12pt;
-    font-weight: 500;
+    font-size:6pt;
     float: right;
     margin:1% 3%;
 }
+
+table, thead, tbody, tr, th, td {
+  border-collapse: collapse;
+}
+
+th, td {
+  border: 1pt solid #AAA;
+}
+
+tr > td:first-child {
+  font-weight: bold;
+}
+
 
 /* Print-specific rules */
 @media print {
     @page {
         size: 8.5in 11in;
-        margin:0.25in;
+        margin:0.15in;
+
+        @bottom-right {
+            font-size: 8pt;
+            /*width:35%;*/
+            text-align:right;
+            vertical-align: top;
+            content: "Created by the Connecticut Data Collaborative | connect.ctdata.org";
+        }
     }
     body {
-        font-size:8.5pt;
+        border-bottom: 2px solid #BBB;
+        font-size:8pt;
         margin:0!important;
+
+        height: 730pt;
+        display: block;
+
+        border-bottom: 2px solid #BBB;
     }
+    div.header {
+        position: fixed;
+        height: 50pt;
+        width: 100%;
+        display: block;
+        clear: both;
+
+        border-bottom: 1px solid #999;
+    }
+    div.header h1 {
+        font-size: 24pt;
+        margin: 0 auto;
+    }
+    div.content {
+        padding-top: 70pt;
+    }
+    div.section,
     div.row {
         page-break-inside: avoid;
     }
