--- a/templates/connect.html
+++ b/templates/connect.html
@@ -55,13 +55,34 @@ CONNECT
         {% if objects["r1"] %}
         <div class="col-xs-4">
             {{ objects["r1"]["output"] | safe }}
-            {{ objects["r1"]["output"] | safe }}
+            {{ objects["r2"]["output"] | safe }}
         </div>
         {% endif %}
     </div>
+    <div class="row section">
+        <h2>Treatment</h2>
+        {% if objects["l2"] %}
+        <div class="col-xs-8">
+            {{ objects["l2"]["output"] | safe }}
+        </div>
+        {% endif %}
+        {% if objects["r1"] %}
+        <div class="col-xs-4">
+            {{ objects["r1"]["output"] | safe }}
+            {{ objects["r2"]["output"] | safe }}
+        </div>
+        {% endif %}
+    </div>
+    <div class="row section">
+        <h2>Population</h2>
+        {% if objects["r3"] %}
+        <div class="col-xs-12">
+            {{ objects["r3"]["output"] | safe }}
+        </div>
+        {% endif %}
+    </div>
+    <hr class="footer_marker"/>
 <div class="container-fluid footer"></div>
-
-
 
 {% endblock body %}
  
