Included d3-jetpack in node requirements package json. All viz scripts now have dynamically calculated text length limits that are applied to word-wrapping the titles. Tables, of course, are the exception, and are styled using css - but the padding from expected wordwrapping is still taken into account.

--- a/static/styles/connect.css
+++ b/static/styles/connect.css
@@ -9,6 +9,9 @@ div.table_container {
     display: block;
 }
 
+table {
+    position: relative;
+}
 table, thead, tbody, tr, th, td {
   border-collapse: collapse;
 }
@@ -33,8 +36,9 @@ p.table_source {
     font-size: 7pt;
     color: #888;
     font-style: italic;
-    position: absolute;
-    right: 20px;
+    position: relative;
+    top: 10px;
+    float: right;
 }
 
 
