--- a/static/styles/connect.css
+++ b/static/styles/connect.css
@@ -1,8 +1,23 @@
 div.row > div > img,
 div.row > div > table,
+div.row > div > ul,
 div.row > div > div,
 div.row > div > div > table{
     width: 100%;
+}
+
+ul.float_list {
+    list-style: outside none none;
+    margin: 0;
+    padding: 0;
+}
+ul.float_list li {
+    display: inline-block;
+    width: 48%;
+}
+
+ul.float_list.town_list li {
+    width: 19%;
 }
 
 div.table_container {
@@ -24,12 +39,13 @@ tr > td:first-child {
   font-weight: bold;
 }
 
-h2.table_title {
+p.table_title {
+    font-weight: bold;
     display: inline-block;
+    float: right;
     font-size: 6pt;
-    margin: 1% 3%;
-    position: absolute;
-    right: 0;
+    margin: 0;
+    position: relative;
 }
 
 p.table_source {
@@ -46,11 +62,10 @@ p.table_source {
 @media print {
     @page {
         size: 8.5in 11in;
-        margin:0.15in 0.20in 0.25in;
+        margin:0.15in 0.20in 0.35in;
 
         @bottom-right {
             font-size: 12pt;
-            /*width:35%;*/
             text-align:right;
             vertical-align: top;
             content: "Created by the Connecticut Data Collaborative | connect.ctdata.org";
