--- a/static/styles/connect.css
+++ b/static/styles/connect.css
@@ -1,27 +1,58 @@
-div.header img {
-        width: 97% !important;
-        padding:1%;
-    }
-    div.header h1 {
-        font-weight: 300;
-        /*border: 1px solid green;*/
-        line-height: 50pt;
-        font-size: 34pt;
-        margin:0 auto;
-        display: inline;
-    }
-div.row > div > img,
-div.row > div > table,
-div.row > div > ul,
-div.row > div > div,
-div.row > div > div > table{
-    width: 100%;
-    /*border: 1px solid red;*/
+div.region_container {
+    height: 80pt !important;
+}
+div.region_map {
+    height: 80pt !important;
+}
+div.region_container div.region_map img {
+    height: 80pt !important;
+    width: auto !important;
+    /*margin: 0 12pt;*/
+}
+div.region_container div.region_map p {
+    float: left;
+    font-size: 20pt;
+    font-weight: bold;
+    margin-top: 0;
+    /*margin: 0 12pt;*/
+    position: absolute;
+}
+div.region_container ul.town_list {
+    margin:0;
+    padding: 5pt 0 0 0;
+    font-size: 8pt;
+}
+div.region_container ul.town_list li {
+    width: 13%;
+}
+
+
+div.header img.logo {
+    width: 97% !important;
+    padding:1%;
+}
+div.header h1 {
+    font-weight: 300;
+    line-height: 50pt;
+    font-size: 34pt;
+    margin:0 auto;
+    display: inline;
+}
+
+p.section_title {
+    font-size: 18pt;
+    margin: 0;
 }
 
 .row div[class^="col-"] {
     padding-left: 0!important;
     padding-right: 0!important;
+}
+div.row > div > img,
+div.row > div > table,
+div.row > div > ul,
+div.row > div > div {
+    width: 100%;
 }
 
 ul.float_list {
@@ -34,35 +65,45 @@ ul.float_list li {
     width: 48%;
 }
 
-ul.float_list.town_list {
-    height: 116px;
-}
-ul.float_list.town_list li {
-    width: 19%;
-}
-
 div.table_container {
     display: block;
+    overflow: hidden;
 }
 
-table {
+div.table_container table {
     position: relative;
 }
 table, thead, tbody, tr, th, td {
   border-collapse: collapse;
 }
 
-th, td {
-  border: 1px solid #979797;
+div.table_container table td {
+    border: 1px solid #979797;
+    padding:0 3px;
+}
+div.table_container table th {
+    border: 1px solid #979797;
+    padding: 0 5pt 0 2pt !important
 }
 
-tr > td:first-child {
-  font-weight: bold;
+div.table_container table tr > td:first-child {
+    text-align: left !important;
+    font-weight: bold;
+}
+div.table_container table td,
+div.table_container table td.string {
+    text-align: left;
+}
+div.table_container table td.currency,
+div.table_container table td.decimal,
+div.table_container table td.integer,
+div.table_container table td.percent {
+    text-align: right;
 }
 
 p.table_title {
     color: #4a4a4a;
-    display: block;
+    display: inline;
     font-size: 8pt;
     font-weight: bold;
     margin: 0 auto;
@@ -71,27 +112,16 @@ p.table_title {
 }
 
 p.table_source {
+    bottom: 7pt;
+    color: #c0c0c0;
+    float: right;
     font-size: 7pt;
-    color: #C0C0C0;
     font-style: italic;
     position: relative;
-    bottom: 7pt;
-    float: right;
 }
 
-p.section_title {
-    font-size: 18pt;
-    margin: 0;
-}
-
-p.region_title {
-    /*border: 1px solid blue;*/
-    float: left;
-    font-size: 20pt;
-    font-weight: bold;
-    margin: 0 25%;
-    position: absolute;
-    width: 50%;
+.table_container > div > div {
+    display: table;
 }
 
 
@@ -120,6 +150,7 @@ p.region_title {
         height: 750pt;
         display: block;
     }
+    hr.header_marker,
     hr.footer_marker {
         position: fixed;
         margin: 0;
@@ -139,9 +170,8 @@ p.region_title {
     }
     div.content {
         position:relative;
-        top: 60pt;
+        top: 135pt;
     }
-    div.section,
     div.row {
         page-break-inside: avoid;
     }
