--- a/static/styles/connect.css
+++ b/static/styles/connect.css
@@ -42,9 +42,12 @@ div.header h1 {
 p.section_title {
     font-size: 18pt;
     margin: 0;
+    clear: both;
+    margin-left: -15px;
+    margin-right: -15px;
 }
-
-.row div[class^="col-"] {
+.row div[class*="col-xs"],
+.section {
     padding-left: 0!important;
     padding-right: 0!important;
 }
@@ -79,11 +82,11 @@ table, thead, tbody, tr, th, td {
 
 div.table_container table td {
     border: 1px solid #979797;
-    padding:0 3px;
+    padding:0 4px;
 }
 div.table_container table th {
     border: 1px solid #979797;
-    padding: 0 5pt 0 2pt !important
+    padding:0 4px;
 }
 
 div.table_container table tr > td:first-child {
@@ -107,6 +110,7 @@ p.table_title {
     font-size: 8pt;
     font-weight: bold;
     margin: 0 auto;
+    padding: 0 0 2px 0;
     text-align: center;
     width: 100%;
 }
@@ -146,8 +150,6 @@ p.table_source {
         font-family: "RobotoCondensed" !important;
         font-size:8pt;
         margin:0!important;
-
-        height: 750pt;
         display: block;
     }
     hr.header_marker,
@@ -172,7 +174,7 @@ p.table_source {
         position:relative;
         top: 135pt;
     }
-    div.row {
+    div.section div.row {
         page-break-inside: avoid;
     }
     .noprint {
