--- a/templates/connect.html
+++ b/templates/connect.html
@@ -55,51 +55,67 @@ CONNECT
     {% endif -%}
 </div>
 <div class="container-fluid content">
-    <div class="row section">
+    <div class="section">
         <p class="section_title">Population</p>
-        {% if objects["r3"] %}
-        <div class="col-xs-12">
-            {{ objects["r3"]["output"] | safe }}
+        <div class="row">
+            {% if objects["r3"] %}
+            <div class="col-xs-12">
+                {{ objects["r3"]["output"] | safe }}
+            </div>
+            {% endif %}
         </div>
-        {% endif %}
+        <div class="row">
+            {% if objects["l2"] %}
+            <div class="col-xs-8">
+                {{ objects["l2"]["output"] | safe }}
+            </div>
+            {% endif %}
+            {% if objects["r1"] %}
+            <div class="col-xs-4">
+                {{ objects["r1"]["output"] | safe }}
+                {{ objects["l2_small"]["output"] | safe }}
+            </div>
+            {% endif %}
+        </div>
+        <div class="row">
+            {% if objects["l2"] %}
+            <div class="col-xs-8">
+                {{ objects["l2"]["output"] | safe }}
+            </div>
+            {% endif %}
+            {% if objects["r1"] %}
+            <div class="col-xs-4">
+                {{ objects["r1"]["output"] | safe }}
+                {{ objects["l2_small"]["output"] | safe }}
+            </div>
+            {% endif %}
+        </div>
     </div>
-    <div class="row section">
+    <div class="section">
         <p class="section_title">Treatment</p>
-        {% if objects["l2"] %}
-        <div class="col-xs-8">
-            {{ objects["l2"]["output"] | safe }}
-        </div>
-        {% endif %}
-        {% if objects["r1"] %}
-        <div class="col-xs-4">
-            {{ objects["r1"]["output"] | safe }}
-            {{ objects["r2"]["output"] | safe }}
-        </div>
-        {% endif %}
-    </div>
-    <div class="row section">
-        <p class="section_title">Treatment</p>
-        {% if objects["l1"] %}
-        <div class="col-xs-8">
-            {{ objects["l1"]["output"] | safe }}
-        </div>
-        {% endif %}
-        {% if objects["r1"] %}
-        <div class="col-xs-4">
-            {{ objects["r1"]["output"] | safe }}
-            {{ objects["r2"]["output"] | safe }}
-        </div>
-        {% endif %}
-    </div>
-    <div class="row section">
-        <p class="section_title">Population</p>
         {% if objects["r3"] %}
-        <div class="col-xs-12">
-            {{ objects["r3"]["output"] | safe }}
-        </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    {{ objects["r3"]["output"] | safe }}
+                </div>
+            </div>
         {% endif %}
+        <div class="row">
+            {% if objects["l2"] %}
+            <div class="col-xs-8">
+                {{ objects["l2"]["output"] | safe }}
+            </div>
+            {% endif %}
+            {% if objects["r1"] %}
+            <div class="col-xs-4">
+                {{ objects["r1"]["output"] | safe }}
+                {{ objects["l2_small"]["output"] | safe }}
+            </div>
+            {% endif %}
+        </div>
     </div>
     <hr class="footer_marker"/>
+</div>
 <div class="container-fluid footer"></div>
 
 {% endblock body %}
