Map and table scripts updated. Fixed connect mock request to work with new table scripts and parameters. Fixed town profile mock so it looks correct. updated requests, styles, templates, etc. accordingly.

--- a/templates/connect.html
+++ b/templates/connect.html
@@ -46,7 +46,7 @@ CONNECT
         </div>
         <div class="col-xs-9">
             <ul class="float_list town_list">
-                {% for row in objects["town_list"]["data"]["records"] -%}
+                {% for row in objects["town_list"]["data"] -%}
                 <li>{{ " ".join(row | listValues) }}</li>
                 {% endfor -%}
             </ul>
