--- a/static/styles/town_profile.css
+++ b/static/styles/town_profile.css
@@ -120,21 +120,37 @@ div.vis_container > * {
 div.vis_container > p {
     width: 95%
 }
+div.vis_container table thead tr th {
+    font-style: italic;
+    line-height: 1.1em;
+}
+div.vis_container table thead tr th,
+div.vis_container table tbody tr td {
+    padding:0.5pt 0;
+}
+div.vis_container table thead tr th[colspan]:not(:first-child) {
+    text-align: center;
+}
+div.vis_container table tbody tr td[colspan] {
+    padding-right: 3%;
+}
+/*div.vis_container table thead tr th[colspan="1"] {
+    text-align: right;
+}*/
 div.vis_container table {
     width: 100%;
 }
 div.vis_container table td:not(:first-child),
 div.vis_container table th:not(:first-child) {
     max-width: 40pt;
-    /*overflow: hidden;*/
 }
-
-div.vis_container table tbody tr th:first-child,
+div.vis_container table thead tr th:first-child,
 div.vis_container table tbody tr td:first-child {
+    text-align: left;
 }
 div.vis_container table thead tr th:not(:first-child),
 div.vis_container table tbody tr td:not(:first-child) {
-  text-align:right;
+    text-align:right;
 }
 table {
     border-collapse: collapse;
@@ -142,24 +158,6 @@ table {
 }
 #business table {
     line-height: 14pt!important;
-}
-th {
-    font-style: italic;
-    line-height: 1.1em;
-}
-th, td {
-    padding:0.5pt 0;
-}
-
-th[colspan] {
-    /*border: 1px solid red;*/
-    text-align: center!important;
-}
-td[colspan] {
-    padding-right: 3%;
-}
-th[colspan="1"] {
-    text-align: right!important;
 }
 div.vis_container > img {
     display: block;
@@ -215,6 +213,13 @@ ul.indent_list li {
     width: 32% !important;
 }
 
+div#age td:nth-child(2n+1):not(:first-child) {
+    text-align: center;
+}
+div#age td:not(:first-child) {
+    width: 6.5%;
+}
+
 @media screen {
     body {
         margin: 2% 10%;
@@ -226,7 +231,7 @@ ul.indent_list li {
 @media print {
     @page {
         size: 8.5in 11in;
-        margin:0.2in 0.4in .85in;
+        margin:0.2in 0.4in .6in;
         @bottom-left {
             font-size: 7pt;
             width:35%;
