More minor updates. Including town/district enrollment callout.

--- a/templates/town_profile.html
+++ b/templates/town_profile.html
@@ -115,6 +115,7 @@ Town Profile{% if config["town"] -%} - {{ config["town"] }}{% endif -%}
         <h4>Connecticut Mastery Test Percent Above Goal</h4>
         {{ objects["cmt"]["output"] | safe }}
         {% endif -%}
+        <p>{{ config["info"]["enrollment_callout"] }}</p>
     </div>
     <div id="graduation" class="vis_container left">
         {% if objects["graduation"] -%}
